@@ -28,6 +28,7 @@ Legend:
 * Updated Basque, Greek and Slovak translations
 * Updated Little CMS to v2.5 (git 3d38474)
 * Updated Unrar to v5.0.7
+* Updated ZenLib to v0.4.29 r444
 ! D3DFullscreen fixes:
   - fixed strange focus behaviour when always on top is enabled
   - fixed VMR9 D3DFS minimizing when losing focus
